Added test branch to action to get it to do its thing without the need for main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build JAR for release
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, jar_release_gh_action ]
   release:
     types: [ published ]
 
