--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
+          distribution: 'zulu'
           java-version: 17
           cache: 'gradle'
 
