Added listing libs directory to check content

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,11 @@ jobs:
           java-version: 17
           cache: 'gradle'
 
-#      - name: Setup Gradle
-#        uses: gradle/gradle-build-action@v3
-
       - name: Gradle build
         run: ./gradlew build --no-daemon
+
+      - name: Check if JAR exists
+        run: ls -l build/libs/
 
       - name: Upload JAR as a release
         if: github.event.name == 'release'
