Added listing libs directory to check content

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build JAR for release
 on:
   push:
     branches: [ main, jar_release_gh_action ]
-#  release:
-#    types: [ published ]
+  release:
+    types: [ published ]
 
 jobs:
   build:
