--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: bitwig-theme-editor-jar
-          path: build/libs/*.jar
+          path: build/libs/**.jar
