--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Upload JAR as a release
 #        if: github.event.name == 'release'
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: bitwig-theme-editor-jar
-          path: build/libs/**.jar
+          path: build/libs/*.jar
