Added upload JAR as a release asset

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,19 @@ jobs:
       - name: Check if JAR exists
         run: ls -l build/libs/
 
-      - name: Upload JAR as a release
+#      - name: Upload JAR
 #        if: github.event.name == 'release'
-        uses: actions/upload-artifact@v4
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: bitwig-theme-editor
+#          path: build/libs/*.jar
+
+      - name: Upload JAR release asset
+        uses: softprops/action-gh-release@v2
+#        if: startsWith(github.ref, 'refs/heads/main')
         with:
-          name: bitwig-theme-editor-jar
-          path: build/libs/*.jar
+          tag_name: ${{ env.VERSION }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: true
+          files: |
+            build/libs/*.jar
